# simpelton

./: .gitignore  CMakeLists.txt  README.md  go.sh
.github/workflows/: main.yml
docker/: Dockerfile
src/: main.cpp
src/.github/workflows/: runnertest.yml
